--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,26 @@
+
 .dcam-blue-light {
     background-color: #68ace3;
 }
 
 .dcam-blue-dark {
     background-color: #216dab;
+}
+
+.bg-dcam {
+    background-image: url(../img/banner1.png);
+    background-size: cover;
+    background-position: center;
+}
+
+.filter {
+    background-color: rgba(0, 0, 0, .5)
+}
+
+.roboto {
+font-family: 'Roboto', sans-serif;
+}
+
+.ovo {
+    font-family: 'Ovo', serif;
 }
