--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,11 @@
     background-position: center;
 }
 
+.bg-notes {
+    background-image: url(../img/bg-notes.png);
+    background-size: cover;
+    background-position: center;}
+
 .filter {
     background-color: rgba(0, 0, 0, .5)
 }
