--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,12 @@
     background-color: #68ace3;
 }
 
-.dcam-blue-dark {
+.dcam-blue-reg {
     background-color: #216dab;
+}
+
+.dcam-blue-dark {
+    background-color: #103756;
 }
 
 .bg-dcam {
