added 'offers' section and made it responsive

--- a/css/style.css
+++ b/css/style.css
@@ -37,3 +37,14 @@ font-family: 'Roboto', sans-serif;
 .min {
     min-width: 220px;
 }
+
+.offers-icon {
+    color:#68ace3; 
+    border: 6px solid #68ace3; 
+    border-radius: 25%; 
+    padding: 30px;
+}
+
+.no-border {
+    border: 0;
+}
