Added font-awesome icons to buttons, created links to teacher bios, updated header

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,14 @@
     color:#c45429;
 }
 
+.dcam-text-blue-reg {
+    color: #216dab;
+}
+
+.dcam-text-blue-dark {
+    color: #103756;
+}
+
 .dcam-red {
     background-color: #c45429;
 }
