added contect to 'Contact' page and made it responsive

--- a/css/style.css
+++ b/css/style.css
@@ -80,3 +80,11 @@ font-family: 'Roboto', sans-serif;
     border-right: none;
 
 }
+
+ol, ul {
+    list-style-position: inside;
+}
+
+img {
+    overflow: hidden;
+}
