--- a/css/style.css
+++ b/css/style.css
@@ -92,3 +92,10 @@ ol, ul {
 img {
     overflow: hidden;
 }
+
+.slider-overlay {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
