updated colors on teachers.html to orange

--- a/css/style.css
+++ b/css/style.css
@@ -114,10 +114,9 @@ font-weight: bold;
 }
 
 .dcam-border {
-    border: 2px solid #c45429;
+    border: 2px solid #ef8354;
     border-left: none;
     border-right: none;
-
 }
 
 ol, ul {
