--- a/css/style.css
+++ b/css/style.css
@@ -167,3 +167,11 @@ img {
     color:#93A5B3;
 
 }
+
+.testimonials-bg {
+    background-image: linear-gradient(to right, #fff, #cecbcb);
+
+}
+
+.testimonials-shadow {
+    box-shadow: 10px 10px 15px grey;}
