--- a/css/style.css
+++ b/css/style.css
@@ -169,9 +169,18 @@ img {
 }
 
 .testimonials-bg {
-    background-image: linear-gradient(to right, #fff, #cecbcb);
+    background-image: linear-gradient(to right, #fff, #e0dede);
 
 }
 
 .testimonials-shadow {
-    box-shadow: 10px 10px 15px grey;}
+    box-shadow: 5px 5px 10px rgb(150, 149, 149);
+}
+
+
+.get-started {
+    background-image: url(../img/ready2.png);
+    background-size: cover;
+    background-position: center;
+    height: 400px;
+}
