re-designed banner area, added new copy

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,14 @@
     color: #103756;
 }
 
+.dcam-text-gray {
+    color: #dadada;
+}
+
+.dcam-text-black {
+    color:#08080880;
+}
+
 
 /* CUSTOM TEXT STYLES */
 .roboto-reg {
@@ -47,6 +55,10 @@ font-weight: bold;
 
 .dcam-bg-gradient {
     background-image: linear-gradient(to right, #216dab, #103756 55%);
+}
+
+.dcam-bg-gradient-2 {
+    background-image: linear-gradient(to right, #ef8354, #c45429 55%);
 }
 
 .dcam-red {
@@ -77,12 +89,12 @@ font-weight: bold;
     background-color: rgb(74, 173, 82);
 }
 
-.dcam-green:hover {
+/* .dcam-green:hover {
     background-color: rgb(74, 173, 82, 0.8);
-}
+} */
 
 .banner {
-    height: 500px;
+    height: 520px;
 }
 
 .banner-row-height {
@@ -118,6 +130,10 @@ font-weight: bold;
     border: 6px solid #68ace3; 
     border-radius: 25%; 
     padding: 30px;
+}
+
+.fab:hover {
+    color: #212529;
 }
 
 .no-border {
